# axildb

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  LICENSE  LICENSING.md  MARKETING.md  README.md  dist-workspace.toml  release-plz.toml
benchmarks/criterion-suite/: Cargo.toml
benchmarks/criterion-suite/benches/: combined.rs
benchmarks/criterion-suite/src/: lib.rs
benchmarks/locomo/: Cargo.toml
benchmarks/locomo/src/: main.rs
benchmarks/longmemeval/: Cargo.toml  README.md  baseline.jsonl
benchmarks/longmemeval/src/: main.rs
benchmarks/sqlite-compare/: Cargo.toml  baseline.json
benchmarks/sqlite-compare/src/: main.rs
benchmarks/vector-latency/: Cargo.toml
benchmarks/vector-latency/src/: main.rs
clients/python/: .gitignore  README.md  conftest.py  pyproject.toml
clients/python/axil_client/: __init__.py
clients/python/tests/: test_client.py
crates/adapters/axil-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/adapters/axil-cli/src/: features.rs  hook_brain.rs  http_server.rs  install_wizard.rs  main.rs  scip_detect.rs  wasm_plugins.rs  workspace.rs
crates/adapters/axil-mcp/: CHANGELOG.md  Cargo.toml
crates/adapters/axil-mcp/src/: lib.rs  protocol.rs  tools.rs
crates/adapters/axil-mcp/tests/: jsonrpc_smoke.rs  parity.rs  writes_and_boot.rs
crates/adapters/axil-ql/: CHANGELOG.md  Cargo.toml
crates/adapters/axil-ql/src/: aggregate.rs  ast.rs  compiler.rs  lexer.rs  lib.rs  parser.rs
crates/adapters/axil-ql/tests/: comprehensive.rs
crates/adapters/axil-runtime/: CHANGELOG.md  Cargo.toml
crates/adapters/axil-runtime/conformance-guest/: Cargo.toml  build.sh
crates/adapters/axil-runtime/src/: lib.rs
crates/adapters/axil-runtime/test-guest/: .gitignore  Cargo.toml  build.sh
crates/adapters/axil-runtime/tests/: conformance.rs  roundtrip.rs
crates/axil-bundle/: CHANGELOG.md  Cargo.toml
crates/axil-bundle/src/: lib.rs
crates/axil-core/: CHANGELOG.md  Cargo.toml
crates/axil-core/benches/: core_benchmarks.rs  encryption_benchmarks.rs  ingest_benchmarks.rs
crates/axil-core/src/: ab_test.rs  activation.rs  adapter.rs  auto_capture.rs  beliefs.rs  bench_metrics.rs  boot.rs  brain.rs  branch.rs  code_refs.rs  config.rs  consolidation.rs  crypto.rs  db.rs  detectors.rs  diagnostics.rs  entity.rs  error.rs  event_log.rs  extension.rs  feedback.rs  importance.rs  inference.rs  lib.rs  lineage.rs  llm.rs  llm_http.rs  metrics.rs  otel.rs  plugin.rs  portable.rs  prefetch.rs  query.rs  query_class.rs  record.rs  remember.rs  scoring.rs  simhash.rs  snapshot.rs  storage.rs  (+6 more)
crates/axil-core/tests/: core_crud.rs  core_query.rs  encryption_global.rs
crates/axil-tests/: Cargo.toml
crates/axil-tests/fixtures/behavior_oracle/: v1.jsonl
crates/axil-tests/src/: lib.rs
crates/axil-tests/tests/: agent_cli.rs  auto_discovery.rs  behavior_oracle.rs  branching.rs  checkpoint_memory_contract.rs  concurrency.rs  consolidation.rs  diagnostics.rs  entity_disambiguation.rs  entity_extraction.rs  extension_audit.rs  fault_injection.rs  fts_basic.rs  fts_combined.rs  fts_precision.rs  graph_basic.rs  graph_combined.rs  indexer_basic.rs  inference.rs  ingest_dir.rs  intelligent_db.rs  lifecycle_policy.rs  mcp_server.rs  memory_accuracy.rs  memory_combined.rs  memory_cross.rs  memory_episodic.rs  memory_preference.rs  memory_procedural.rs  memory_semantic.rs  memory_supersede.rs  memory_working.rs  multi_agent.rs  pattern_recognition.rs  phase_13b_proxies.rs  portable_export_import.rs  ranking_stability.rs  runtime_basic.rs  self_healing.rs  skill_config.rs  (+7 more)
crates/engines/axil-fts/: CHANGELOG.md  Cargo.toml
crates/engines/axil-fts/benches/: fts_benchmarks.rs
crates/engines/axil-fts/src/: code_tokenizer.rs  index.rs  lib.rs
crates/engines/axil-graph/: CHANGELOG.md  Cargo.toml
crates/engines/axil-graph/benches/: graph_benchmarks.rs
crates/engines/axil-graph/src/: edge.rs  lib.rs  pagerank.rs  traverse.rs
crates/engines/axil-timeseries/: CHANGELOG.md  Cargo.toml
crates/engines/axil-timeseries/src/: index.rs  lib.rs
crates/engines/axil-vector/: CHANGELOG.md  Cargo.toml
crates/engines/axil-vector/benches/: vector_benchmarks.rs
crates/engines/axil-vector/examples/: embed_probe.rs
crates/engines/axil-vector/src/: binary.rs  download.rs  embed.rs  hnsw.rs  lib.rs  mmap.rs  models.rs  quantize.rs
crates/extensions/axil-cache/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-cache/src/: codref.rs  extension.rs  lib.rs
crates/extensions/axil-checkpoint/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-checkpoint/src/: extension.rs  lib.rs
crates/extensions/axil-docs/: CHANGELOG.md  Cargo.toml  README.md
crates/extensions/axil-docs/src/: extension.rs  imports.rs  ingest.rs  lib.rs  local.rs  manifest.rs  pipeline.rs  query.rs  refresh.rs  resolve.rs  web.rs
crates/extensions/axil-indexer/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-indexer/src/: analytics.rs  ask.rs  code_recall_eval.rs  config.rs  config_sections.rs  context_savings.rs  distill.rs  freshness.rs  impact.rs  indexer.rs  lib.rs  markdown.rs  prefetch.rs  progress.rs  proxy.rs  recall.rs  rerank.rs  rules.rs  scanner.rs  token.rs
crates/extensions/axil-memory/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-memory/src/: episodic.rs  lib.rs  patterns.rs  preference.rs  procedural.rs  recall.rs  reflect.rs  semantic.rs  session.rs  supersede.rs  ttl.rs  (+1 more)
crates/extensions/axil-rerank/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-scip/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-sync/: CHANGELOG.md  Cargo.toml
crates/extensions/axil-workspace/: CHANGELOG.md  Cargo.toml
crates/proto/axil-atlas-proto/: CHANGELOG.md  Cargo.toml
fuzz/: .gitattributes  .gitignore  Cargo.toml
fuzz/corpus/ql_parse/: adv_f03_comments  adv_f05_long_string  adv_f06_nested_comments  adv_f07_repeated_keywords  adv_f08_max_integer  adv_f09_unicode  adv_f10_null_byte  valid_count  valid_explain  valid_find_full  valid_get  valid_recall_basic  valid_recall_combined  valid_traverse  valid_where_float  valid_where_literals
fuzz/fuzz_targets/: ql_parse.rs
(+213 files in other folders)
