[package]
# Umbrella facade re-exporting axil-core (+ optional engines); hosts the
# top-level examples. Renamed off "axildb" so the publishable CLI crate can
# own that name (`cargo install axildb` → the `axil` binary). Never published.
name = "axildb-umbrella"
version = "1.1.0"
edition = "2021"
publish = false

[workspace]
# Phase 17 layout — crates are grouped by extensibility tier.
# See docs/src/extending/overview.md for the three-tier taxonomy.
members = [
    "crates/axil-core",
    # Central built-in Extension registry (sits above extensions, below adapters)
    "crates/axil-bundle",
    # Tier 1 — Engines (storage substrates, implement the Plugin trait)
    "crates/engines/axil-vector",
    "crates/engines/axil-graph",
    "crates/engines/axil-fts",
    "crates/engines/axil-timeseries",
    # Tier 2 — Extensions (capabilities built on Engines)
    "crates/extensions/axil-memory",
    "crates/extensions/axil-indexer",
    "crates/extensions/axil-scip",
    "crates/extensions/axil-docs",
    "crates/extensions/axil-checkpoint",
    "crates/extensions/axil-workspace",
    # Tier 3 — Adapters (interface to the outside world)
    "crates/adapters/axil-runtime",
    "crates/adapters/axil-mcp",
    "crates/adapters/axil-ql",
    "crates/adapters/axil-cli",
    # Workspace-wide tests (not tier-classified)
    "crates/axil-tests",
]
# Benchmark crates live under `benchmarks/`. Their SOURCES ARE TRACKED (see
# .gitignore: only generated data/, target/, out/ are ignored). They are
# `exclude`d from the default workspace — not gitignored — so `cargo check
# --workspace` stays fast and a clean checkout builds without them; run one on
# demand with `cargo run --release --manifest-path benchmarks/<name>/Cargo.toml`.
# CI gates them via explicit --manifest-path jobs (scripts/sqlite-compare-gate.sh,
# scripts/bench-check.sh), never by adding them to the workspace.
exclude = [
    # WASM guest component (built with cargo-component for wasm32-wasip2, not a
    # native workspace member) — a test fixture for the axil-runtime host.
    "crates/adapters/axil-runtime/test-guest",
    "benchmarks/longmemeval",
    "benchmarks/locomo",
    "benchmarks/criterion-suite",
    "benchmarks/vector-latency",
    "benchmarks/sqlite-compare",
]
resolver = "2"

[dependencies]
axil-core.workspace = true
axil-vector = { workspace = true, optional = true }
axil-graph = { workspace = true, optional = true }
axil-memory = { workspace = true, optional = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }

[features]
default = []
vector = ["dep:axil-vector"]
embed = ["vector", "axil-vector/embed"]
graph = ["dep:axil-graph"]
memory = ["dep:axil-memory"]

# Examples that exercise optional plugins must declare the feature they
# need, so `cargo test --workspace` (default features = none) skips them
# instead of aborting the whole build on an unresolved optional crate.
# basic_crud and query_builder need only axil-core — left auto-discovered.
[[example]]
name = "vector_search"
required-features = ["embed"]

[[example]]
name = "graph_queries"
required-features = ["graph"]

[[example]]
name = "agent_memory"
required-features = ["memory"]

[workspace.package]
version = "2.0.1"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/FC4b/axildb"

[workspace.dependencies]
# Internal crates — declared once here (path for local builds, version for
# crates.io). Members reference them via `axil-x.workspace = true`, so a release
# bump touches only `[workspace.package] version` + the versions below, not a
# pin scattered across every member manifest.
axil-core = { path = "crates/axil-core", version = "2.0.1" }
axil-bundle = { path = "crates/axil-bundle", version = "2.0.1" }
axil-vector = { path = "crates/engines/axil-vector", version = "2.0.1" }
axil-graph = { path = "crates/engines/axil-graph", version = "2.0.1" }
axil-fts = { path = "crates/engines/axil-fts", version = "2.0.1" }
axil-timeseries = { path = "crates/engines/axil-timeseries", version = "2.0.1" }
axil-memory = { path = "crates/extensions/axil-memory", version = "2.0.1" }
axil-indexer = { path = "crates/extensions/axil-indexer", version = "2.0.1" }
axil-scip = { path = "crates/extensions/axil-scip", version = "2.0.1" }
axil-docs = { path = "crates/extensions/axil-docs", version = "2.0.1" }
axil-checkpoint = { path = "crates/extensions/axil-checkpoint", version = "2.0.1" }
axil-workspace = { path = "crates/extensions/axil-workspace", version = "2.0.1" }
axil-runtime = { path = "crates/adapters/axil-runtime", version = "2.0.1" }
axil-mcp = { path = "crates/adapters/axil-mcp", version = "2.0.1" }
axil-ql = { path = "crates/adapters/axil-ql", version = "2.0.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
redb = "3"
ulid = "1"
# Pure-Rust DEFLATE via the miniz_oxide backend (no system zlib / C dep). Used
# by recall's completeness k-widening to compare compression ratios.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tempfile = "3"
parking_lot = "0.12"
toml = "0.8"
ort = { version = "=2.0.0-rc.10", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
rustyline = "15"
sha2 = "0.10"
ureq = "3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
indicatif = "0.17"
proptest = "1"
