[package]
name = "locomo-bench"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "locomo-bench"
path = "src/main.rs"

[dependencies]
axil-core = { path = "../../crates/axil-core" }
axil-vector = { path = "../../crates/axil-vector", features = ["embed"] }
axil-fts = { path = "../../crates/axil-fts" }
axil-indexer = { path = "../../crates/axil-indexer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
