[package]
name = "longmemeval-bench"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[features]
default = []
rerank = ["axil-indexer/rerank"]
# Generic GPU acceleration. Enables both CUDA and DirectML EP attempts; at
# runtime the embedder tries CUDA first (best perf when cuDNN is present)
# then DirectML (works on any DX12 GPU on Windows without CUDA Toolkit),
# then falls back to CPU. See axil-vector::embed::build_session.
gpu = ["axil-vector/cuda", "axil-vector/directml"]
gpu-directml = ["axil-vector/directml"]
gpu-cuda = ["axil-vector/cuda"]

[[bin]]
name = "longmemeval-bench"
path = "src/main.rs"

[dependencies]
axil-core = { path = "../../crates/axil-core" }
axil-vector = { path = "../../crates/axil-vector", features = ["embed"] }
axil-fts = { path = "../../crates/axil-fts" }
axil-graph = { path = "../../crates/axil-graph" }
axil-indexer = { path = "../../crates/axil-indexer" }
axil-memory = { path = "../../crates/axil-memory" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
num_cpus = "1.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
