[package]
name = "sqlite-compare-bench"
version = "0.5.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "sqlite-compare"
path = "src/main.rs"

[dependencies]
axil-core = { path = "../../crates/axil-core" }
axil-vector = { path = "../../crates/axil-vector" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
