[package]
name = "axil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core storage engine and Engine traits for Axil"

[dependencies]
chrono = { workspace = true }
parking_lot = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
ureq = { workspace = true, optional = true }
# DEFLATE compression for recall's completeness k-widening (pure-Rust backend).
# Non-optional: k-widening is part of the default recall feature set.
flate2 = { workspace = true }
sha2 = "0.10"
regex = "1"
# Real-tokenizer token estimation (behind feature flag, opt-in only).
tokenizers = { workspace = true, optional = true }

# OpenTelemetry (behind feature flag)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "metrics"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "ingest_benchmarks"
harness = false

[features]
default = []
llm-http = ["dep:ureq"]
# Opt-in precise token counting via a HuggingFace tokenizer model (no network,
# loads a local tokenizer.json). Default builds keep the chars/4 heuristic.
real-tokenizer = ["dep:tokenizers"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
