[package]
name = "axil-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core storage engine and Engine traits for Axil"

[dependencies]
chrono = { workspace = true }
parking_lot = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
ureq = { workspace = true, optional = true }
# DEFLATE compression for recall's completeness k-widening (pure-Rust backend).
# Non-optional: k-widening is part of the default recall feature set.
flate2 = { workspace = true }
sha2 = "0.10"
regex = "1"
# AEAD for opt-in encryption-at-rest (record bodies). Pure-Rust XChaCha20-Poly1305
# — no AES-NI assumption. `getrandom` pulls the OS CSPRNG for per-write nonces.
chacha20poly1305 = { version = "0.10", optional = true, features = ["getrandom"] }
# Real-tokenizer token estimation (behind feature flag, opt-in only).
tokenizers = { workspace = true, optional = true }

# OpenTelemetry (behind feature flag)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "metrics"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "ingest_benchmarks"
harness = false

[features]
default = []
llm-http = ["dep:ureq"]
# Opt-in precise token counting via a HuggingFace tokenizer model (no network,
# loads a local tokenizer.json). Default builds keep the chars/4 heuristic.
real-tokenizer = ["dep:tokenizers"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
# Durable, opt-in change-data-capture tape (`_changelog`). Off by default — the
# default build is byte-identical and incurs zero write-path overhead. The
# keystone for the future Atlas sync product and cheaper `branch_merge`.
cdc = []
# Durable, opt-in semantic event log (`_event_log`). Off by default — the
# default build is byte-identical and incurs zero write-path overhead. Captures
# a curated allowlist of agent-meaningful events (belief revised, decision
# superseded, error fixed, checkpoint written) under a monotonic ULID cursor so
# a second agent can pull "what changed since I last looked" via `recall_delta`.
event-log = []
# Opt-in encryption-at-rest for core record bodies (XChaCha20-Poly1305 AEAD,
# per-record random nonce, AAD bound to the record ID). Off by default — the
# default build is byte-identical and carries no crypto dependency. HONEST
# SCOPE: encrypts record bodies only; `.vec` embeddings and `.fts` tokens stay
# cleartext, and table names + record IDs remain visible. Keys come from
# AXIL_ENC_KEY or a key file and never touch the `.axil` file. See
# `crate::crypto` for the wire format and key sources.
encryption = ["dep:chacha20poly1305"]
