[package]
name = "axil-tests"
version = "2.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Integration tests for Axil (not published)"

[dev-dependencies]
axil-core = { path = "../axil-core" }
# Central built-in Extension registry — the audit test derives its set from here.
axil-bundle = { path = "../axil-bundle", features = ["full"] }
# Tier 1 — Engines
axil-vector = { path = "../engines/axil-vector" }
axil-graph = { path = "../engines/axil-graph" }
axil-timeseries = { path = "../engines/axil-timeseries" }
axil-fts = { path = "../engines/axil-fts" }
# Tier 2 — Extensions
axil-memory = { path = "../extensions/axil-memory" }
axil-indexer = { path = "../extensions/axil-indexer" }
axil-docs = { path = "../extensions/axil-docs" }
axil-checkpoint = { path = "../extensions/axil-checkpoint" }
# Tier 3 — Adapters
axil-mcp = { path = "../adapters/axil-mcp" }
chrono = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
proptest = { workspace = true }
