[package]
name = "axildb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for Axil — the primary agent interface"

[[bin]]
name = "axil"
path = "src/main.rs"

[dependencies]
axil-core.workspace = true
axil-bundle.workspace = true
axil-workspace.workspace = true
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = { workspace = true }
toml = { workspace = true }
walkdir = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[dependencies.axil-vector]
workspace = true
optional = true

[dependencies.axil-graph]
workspace = true
optional = true

[dependencies.axil-fts]
workspace = true
optional = true

[dependencies.axil-timeseries]
workspace = true
optional = true

[dependencies.axil-indexer]
workspace = true
optional = true

[dependencies.axil-scip]
workspace = true
optional = true

[dependencies.axil-docs]
workspace = true
optional = true

[dependencies.axil-checkpoint]
workspace = true
optional = true

[dependencies.axil-memory]
workspace = true
optional = true

[dependencies.axil-ql]
workspace = true
optional = true

[dependencies.rustyline]
workspace = true
optional = true

[dependencies.axil-mcp]
workspace = true
optional = true

[dependencies.axum]
workspace = true
optional = true

[dependencies.tower-http]
workspace = true
optional = true

[dependencies.axil-runtime]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["core", "vector", "embed", "graph", "fts", "timeseries", "indexer", "scip", "deps", "checkpoint", "memory", "llm-http", "mcp", "ql", "http"]
core = []
vector = ["dep:axil-vector"]
embed = ["vector", "axil-vector/embed"]
graph = ["dep:axil-graph"]
fts = ["dep:axil-fts"]
timeseries = ["dep:axil-timeseries"]
indexer = ["dep:axil-indexer"]
scip = ["dep:axil-scip", "graph"]
deps = ["dep:axil-docs", "axil-bundle/deps"]
checkpoint = ["dep:axil-checkpoint", "axil-bundle/checkpoint"]
# Default-off built-in HTTP doc fetcher (Phase 16 Path B). Offline-first
# is the default posture; implies `deps`.
web-docs = ["deps", "axil-docs/web-docs"]
memory = ["dep:axil-memory"]
llm-http = ["axil-core/llm-http"]
otel = ["axil-core/otel"]
mcp = ["dep:axil-mcp"]
ql = ["dep:axil-ql", "dep:rustyline"]
rerank = ["indexer", "axil-indexer/rerank"]
http = ["dep:axum", "dep:tower-http"]
# Runtime WASM plugins (Phase 22). Default-OFF: pulls Wasmtime in, so it's opt-in
# to preserve the small-binary posture. `axil ext …` + .axil/plugins discovery.
wasm-host = ["dep:axil-runtime", "axil-runtime/wasm-host"]
full = ["vector", "embed", "graph", "fts", "timeseries", "indexer", "scip", "deps", "checkpoint", "rerank", "memory", "llm-http", "mcp", "ql", "http"]
