[package]
name = "axildb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for Axil — the primary agent interface"

[[bin]]
name = "axil"
path = "src/main.rs"

# `cargo binstall axildb` resolves the prebuilt archive the release workflow
# uploads (`.github/workflows/release.yml`) instead of compiling from source.
# The pkg-url MUST match the archive naming that workflow produces
# (`axildb-<target>.<ext>`) and the release-plz per-crate tag (`axildb-v<version>`).
# This block is hand-maintained in lockstep with the hand-authored release.yml —
# do NOT run `dist init`/`dist generate` (it would add a competing release
# workflow on the same tag; see release.yml + dist-workspace.toml headers).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/axildb-v{ version }/axildb-{ target }.{ archive-suffix }"
bin-dir = "axildb-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
axil-core.workspace = true
axil-bundle.workspace = true
axil-workspace.workspace = true
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = { workspace = true }
toml = { workspace = true }
walkdir = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[dependencies.axil-vector]
workspace = true
optional = true

[dependencies.axil-graph]
workspace = true
optional = true

[dependencies.axil-fts]
workspace = true
optional = true

[dependencies.axil-timeseries]
workspace = true
optional = true

[dependencies.axil-indexer]
workspace = true
optional = true

[dependencies.axil-scip]
workspace = true
optional = true

[dependencies.axil-docs]
workspace = true
optional = true

[dependencies.axil-checkpoint]
workspace = true
optional = true

[dependencies.axil-cache]
workspace = true
optional = true

[dependencies.axil-memory]
workspace = true
optional = true

[dependencies.axil-ql]
workspace = true
optional = true

[dependencies.rustyline]
workspace = true
optional = true

[dependencies.axil-mcp]
workspace = true
optional = true

[dependencies.axum]
workspace = true
optional = true

[dependencies.tower-http]
workspace = true
optional = true

[dependencies.axil-runtime]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["core", "vector", "embed", "graph", "fts", "timeseries", "indexer", "scip", "deps", "checkpoint", "cache", "memory", "llm-http", "mcp", "ql", "http"]
core = []
vector = ["dep:axil-vector"]
embed = ["vector", "axil-vector/embed"]
graph = ["dep:axil-graph"]
fts = ["dep:axil-fts"]
timeseries = ["dep:axil-timeseries"]
indexer = ["dep:axil-indexer"]
scip = ["dep:axil-scip", "graph"]
deps = ["dep:axil-docs", "axil-bundle/deps"]
checkpoint = ["dep:axil-checkpoint", "axil-bundle/checkpoint"]
# Semantic answer cache Extension — reuse a derived answer on a similar
# question, with code-aware invalidation. Fully generic Path-C dispatch, so no
# `main.rs` wiring: the Extension declares its CLI surface and the external-
# subcommand path routes `axil cache …` to it.
cache = ["dep:axil-cache", "axil-bundle/cache"]
# Default-off built-in HTTP doc fetcher (Phase 16 Path B). Offline-first
# is the default posture; implies `deps`.
web-docs = ["deps", "axil-docs/web-docs"]
memory = ["dep:axil-memory"]
llm-http = ["axil-core/llm-http"]
otel = ["axil-core/otel"]
# Durable semantic event log + `recall_delta` (pull-based cross-agent delta).
# Off by default — write-amplifier; enabling it changes no default behavior.
event-log = ["axil-core/event-log", "axil-mcp?/event-log"]
# Opt-in encryption-at-rest for core record bodies (XChaCha20-Poly1305 AEAD).
# Off by default — the default build is byte-identical and carries no crypto
# dep. With the feature compiled in, the CLI resolves a key from AXIL_ENC_KEY
# (or AXIL_ENC_KEY_FILE) once at startup and installs it as the process-wide
# default cipher, so every database opened by the process — including the
# in-process MCP server and core-internal multi-DB ops — seals/unseals record
# bodies. No key set → cleartext bodies (no-op). HONEST SCOPE: bodies only;
# `.vec`/`.fts` companions stay cleartext. Deliberately excluded from `full`
# (like `event-log`) because it changes the on-disk body format.
encryption = ["axil-core/encryption"]
mcp = ["dep:axil-mcp"]
ql = ["dep:axil-ql", "dep:rustyline"]
rerank = ["indexer", "axil-indexer/rerank"]
http = ["dep:axum", "dep:tower-http"]
# Runtime WASM plugins (Phase 22). Default-OFF: pulls Wasmtime in, so it's opt-in
# to preserve the small-binary posture. `axil ext …` + .axil/plugins discovery.
wasm-host = ["dep:axil-runtime", "axil-runtime/wasm-host"]
full = ["vector", "embed", "graph", "fts", "timeseries", "indexer", "scip", "deps", "checkpoint", "cache", "rerank", "memory", "llm-http", "mcp", "ql", "http"]
