[package]
name = "axil-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for Axil — JSON-RPC over stdio"

[dependencies]
axil-core = { path = "../../axil-core", version = "1.0.0" }
# Bundle with `deps` on: axil-mcp always ships DocsExtension (axil-docs is a
# non-optional dependency here), so its built-in registration is always present.
axil-bundle = { path = "../../axil-bundle", features = ["deps"], version = "1.0.0" }
axil-indexer = { path = "../../extensions/axil-indexer", version = "1.0.0" }
axil-docs = { path = "../../extensions/axil-docs", version = "1.0.0" }
axil-workspace = { path = "../../extensions/axil-workspace", version = "1.0.0" }

# Optional Tier-2 Extensions — gate so consumers can build a trimmed
# MCP server binary without pulling them in. Matches axil-cli's pattern.
axil-checkpoint = { path = "../../extensions/axil-checkpoint", optional = true, version = "1.0.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "io-std"] }
anyhow = { workspace = true }
chrono = { workspace = true }

# Plugin crates — attached lazily at `McpServer::open` based on companion
# files present on disk. Optional so non-MCP builds that re-export axil-mcp
# don't pull the full stack unless they want it.
axil-vector = { path = "../../engines/axil-vector", optional = true, version = "1.0.0" }
axil-graph = { path = "../../engines/axil-graph", optional = true, version = "1.0.0" }
axil-fts = { path = "../../engines/axil-fts", optional = true, version = "1.0.0" }
axil-timeseries = { path = "../../engines/axil-timeseries", optional = true, version = "1.0.0" }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["vector", "graph", "fts", "timeseries", "checkpoint"]
vector = ["dep:axil-vector"]
graph = ["dep:axil-graph"]
fts = ["dep:axil-fts"]
timeseries = ["dep:axil-timeseries"]
checkpoint = ["dep:axil-checkpoint", "axil-bundle/checkpoint"]
# Vector with embedder (bge-small/etc.) for plugin-attach parity with CLI.
embed = ["vector", "axil-vector/embed"]
